// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero renders 1`] = `
.c2 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  max-width: 768px;
}

.c0 {
  font-size: 28px;
  width: 100%;
  background-color: #0588cb;
  color: #f8f9fa;
  text-align: center;
}

@media screen and (min-width:32em) {
  .c1 {
    max-width: 1024px;
  }
}

@media screen and (min-width:48em) {
  .c1 {
    max-width: 1280px;
  }
}

<Hero
  fontSize={3}
>
  <Hero__StyledHero
    fontSize={3}
  >
    <div
      className="c0"
      fontSize={3}
    >
      <Styled(Box)
        maxWidth={
          Array [
            768,
            1024,
            1280,
          ]
        }
        mx="auto"
        px={3}
      >
        <Box
          className="c1"
          maxWidth={
            Array [
              768,
              1024,
              1280,
            ]
          }
          mx="auto"
          px={3}
        >
          <div
            className="c1 c2"
          />
        </Box>
      </Styled(Box)>
    </div>
  </Hero__StyledHero>
</Hero>
`;

exports[`Hero renders with children 1`] = `
.c2 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  max-width: 768px;
}

.c0 {
  font-size: 28px;
  width: 100%;
  background-color: #0588cb;
  color: #f8f9fa;
  text-align: center;
}

@media screen and (min-width:32em) {
  .c1 {
    max-width: 1024px;
  }
}

@media screen and (min-width:48em) {
  .c1 {
    max-width: 1280px;
  }
}

<Hero
  fontSize={3}
>
  <Hero__StyledHero
    fontSize={3}
  >
    <div
      className="c0"
      fontSize={3}
    >
      <Styled(Box)
        maxWidth={
          Array [
            768,
            1024,
            1280,
          ]
        }
        mx="auto"
        px={3}
      >
        <Box
          className="c1"
          maxWidth={
            Array [
              768,
              1024,
              1280,
            ]
          }
          mx="auto"
          px={3}
        >
          <div
            className="c1 c2"
          >
            <div
              key=".0"
            />
          </div>
        </Box>
      </Styled(Box)>
    </div>
  </Hero__StyledHero>
</Hero>
`;
